# duk

./: .gitignore  README.md  pyproject.toml
duk/: asr.py  cli.py  epub.py  player.py  sanitize.py  synth_f5.py  synth_qwen.py  text.py  tts.py  voice.py
duk/f5/: __init__.py  audio.py  dit.py  model.py  text.py
duk/templates/: player.html  sanitize-rules.json
tests/: test_asr.py  test_audio_norm.py  test_engine_parity.py  test_merge.py  test_tts_numbers.py  test_voice.py
