[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duk"
version = "0.1.0"
description = "Chinese EPUB to M4B pipeline using Qwen3-TTS voice cloning"
authors = []
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4>=4.12",
    "ebooklib>=0.18",
    "mlx-audio[tts]>=0.3.0",
    "fastapi>=0.110",
    "httpx<1",
    "jinja2>=3.1",
    "lxml>=5.0",
    "mlx-whisper",
    "numpy>=1.24",
    "opencc>=1.1.7",
    "python-multipart>=0.0.9",
    "pytest",
    "rich>=13.7",
    "soundfile>=0.12",
    "uvicorn>=0.27",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.scripts]
duk = "duk.cli:main"

[tool.uv]
# Apple Silicon (macOS arm64) is the only supported platform (MLX).
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.hatch.build.targets.wheel]
packages = ["duk"]
